@@ -39,6 +39,8 @@ Release date to be announced, codename to be decided.
 - Immutable datastructures are hashable now.
 - Headers datastructure no longer allows newlines in values to avoid
   header injection attacks.
+- Made it possible though subclassing to select a different remote
+  addr in the proxy fix.
 - Removed support for Python 2.4
 
 Version 0.7.2
